--- a/_posts/2019-08-18-NIO.md
+++ b/_posts/2019-08-18-NIO.md
@@ -512,3 +512,60 @@ JDK1.4提供的NIO框架，称为异步非阻塞I/O,但是严格按照UNIX网络
 
 ##### Kubernetes
 Kubernetes是一个完备的分布式系统支撑平台
+
+
+#### IO
+1. 阻塞IO（bloking IO） 对于网络IO来说，很多时候数据一开始还没有到达（比如没有收到一个完整的UDP包），这个时候内核就需要等待足够的数据到来，二用户进程就会被阻塞，
+当数据准备好后，会将数据从内核拷贝到用户内存，返回接口，用户进程才解除阻塞状态进行运行。 实现难度低，不适合高并发的应用。
+
+2. 非阻塞IO（non-blocking IO） 当用户进程发出read操作时，如果内核还没有准备好数据，它不会阻塞用户进程，而是直接返回一个error,从用户进程角度看，它发起一个操作并不需要等待，
+用户进程需要不断的主动轮询内核，确认数据是否已准备好，进程重复（轮询）调用，消耗cpu资源。也不适合高并发应用。
+
+3. 多路复用IO（multiplexing IO） 多个进程的I/O可以注册到一个复用器（selector）上，当用户进程调用selector,selector会监听已注册的使用读写事件，
+当任意I/O在内核缓冲区有可读/写事件时，selector就会返回。 多个I/O进程注册后，只有一个select调用进程被阻塞。select/epoll的优势并不是对单个连接处理的更快，而是能处理更多的连接。
+
+信号驱动式IO（signal-driven IO）
+
+异步IO（asynchronous IO） 告知内核启动某个操作，并让内核在整个操作完成时通知我们。jdk1.7(NIO2)才是真正实现了AIO
+
+##### netty 工作流程
+```
+Client ---> ChannelOutBoundHandler ---> Encoder编码器 ---> Decoder解码器 ---> ChannelInBoundHandler(业务处理handler) ---> server
+---> ChannelOutBoundHandler ---> Encoder编码器 ---> Decoder解码器 ---> ChannelInBoundHandler ---> Client
+```
+
+ChannelPipeline管道流水线
+
+##### ByteBuf
+优势
+1. 可变长 `Unpooled.buffer(int initialCapacity, int maxCapacity)`
+2. 可池化 （不用来回创建和销毁）
+3. 可实现零拷贝 通过内置的复合缓冲区类型实现了透明的零拷贝
+4. 读写双索引 在读和写这两种模式之间切换不需要调用ByteBuffer的flip()方法
+
+##### 编解码器
+1. Encoder编码器 它将对象序列化为字节数组，用于网络传输、数据持久化或者其它用途
+2. Decoder解码器 它把从网络、磁盘等读取的字节数组还原成原始对象（通常是原始对象的拷贝）
+3. Codec编解码器  以上的结后体
+
+##### handler 处理器
+1. ChannelHandlerAdapter 
+2. ChannelOutboundHandlerAdapter
+3. ChannelInboundHandlerAdapter
+4. SimpleChannelInboundHandler 主要使用这个子类
+
+##### 粘包和拆包
+产生粘包和拆包问题的主要原因:
+1. 操作系统在发送TCP数据的时候，底层会有一个缓冲区，例如1024个字节大小，如果一次请求发送的数据量比较小，没达到缓冲区大小，TCP则会将多个请求合并为同一个请求进行发送，这就形成了粘包问题；
+2. 如果一次请求发送的数据量比较大，超过了缓冲区大小，TCP就会将其拆分为多次发送，这就是拆包，也就是将一个大的包拆分为多个小包进行发送。
+
+对于粘包和拆包问题，常见的解决方案有四种：
+
+1. 消息定长  客户端在发送数据包的时候，每个包都固定长度，比如1024个字节大小，如果客户端发送的数据长度不足1024个字节，则通过补充空格的方式补全到指定长度； FixedLengthFrameDecoder
+2. 分隔符    客户端在每个包的末尾使用固定的分隔符，例如\r\n，如果一个包被拆分了，则等待下一个包发送过来之后找到其中的\r\n，
+            然后对其拆分后的头部部分与前一个包的剩余部分进行合并，这样就得到了一个完整的包； LineBasedFrameDecoder与DelimiterBasedFrameDecoder
+3. 将消息分为头部和消息体，在头部中保存有当前整个消息的长度，只有在读取到足够长度的消息之后才算是读到了一个完整的消息； LengthFieldBasedFrameDecoder与LengthFieldPrepender
+4. 通过自定义协议进行粘包和拆包的处理。
+
+##### 心跳检测和断线重连
+netty中为我们提供一个特别好用的IdleStateHandler
