--- a/_posts/2020-03-23-jvm指令和工具.md
+++ b/_posts/2020-03-23-jvm指令和工具.md
@@ -337,3 +337,12 @@ jvm运行时会生成一个目录hsperfdata_$USER($USER是启动java进程的用
 centos 会自动清理/tmp目录下的文件
 
 
+top -Hp  pid
+
+键入P (大写p)，线程按照CPU使用率排序
+
+将线程PID转化为16进制
+
+printf '%x' xxxx
+
+jstack pid | grep '0x2a34' -C10 --color
