--- a/_posts/2019-05-19-mysql.md
+++ b/_posts/2019-05-19-mysql.md
@@ -224,3 +224,258 @@ Cardinality值非常关键，优化器会根据职工值来判断是否使用这
 
 * 红黑树在数据量大的情况下，树的高度太高，作为索引查询效率也低。 横向扩容  B树
 B+树在相邻的叶子结点维护一个双向指针（B树的区别在这）
+
+
+
+
+
+##### 索引
+如果让你存储索引？怎么设计？
+索引是否是一个文件？ 是
+索引是否需要持久化？ 是
+
+检索某个key,需要知道
+key(键)，fileName（位于哪个文件），offsets（文件中的偏移量）。 存在的弊端，扫描太慢。耗费内存空间
+
+OLAP：联机分析处理，对历史数据的分析，产生决策影响。需要将数据都读到内存中处理。
+OLTP：联机事务处理，必须要在很短的时间内反馈结果。
+
+只是用来存储数据，可以用的数据结构很多：
+hash表：插入数据时，先计算当前key的hash值，会被分配到某一个地址上，如果重复，往其上的链表上增加，查询也是一样，数据存储不均匀，
+        会造成存储空间浪费，要设计一个优秀的hash算法，保证数据尽可能多的散列；在继续hash表存储时，需要把整个hash表加载到内存，
+        需要占用很多的内存空间，耗费内存。查找某一个key,可以快速找到，这是等值查询，如果是范围查询，只能遍历整个hash表，这时是非常慢的。
+        适合等值查询，不适合范围查询。
+
+mysql 中是否有hash索引？
+索引是和对应的存储引擎相关的，memory使用hash索引；innodb这种存储引擎支持自适应hash。
+
+二叉树：树的每个分支都只有2个节点
+
+BST：插入数据时自动排序，每个节点的值大于其任意左侧子节点的值，小于其任意右节点的值。
+     查找时可以使用二分查找，
+
+如果这棵树是递增或者递减的序列，会慢慢的由一棵二叉树退化成链表，链表 On的时间复杂度，
+绝决方案，插入的时候能不能尽可能多的保证这棵树的平衡，在次基础上有了 AVL二叉平衡树，插入时会自动旋转，
+旋转是插入、删除时进行的，AVL 损失了一部分插入的性能来满足查询的性能提升。
+查询和插入是差不多的情况下，不能满足。 绝决方法 红黑树，插入和查询的性能尽可能的得到平衡。
+
+红黑树：
+AVL二叉平衡树：
+B树：
+
+为什么索引不用这3种数据结构？
+最大的问题是 每个节点有且仅存了一个值的数据，如果要保证插入更多的数据，只能加深树的深度，佳森树的深度，会产生什么影响？
+读取数据到底是怎么读取的？实际就是IO问题。要提高IO效率，只能从硬件上改，很难控制，所以只能通过程序来控制，
+1.尽量减少IO的次数，2. 尽量减少IO的的量，读一次和10次，读1M和100M肯定是不一样的。
+磁盘和内存在交互时，1. 局部性原理： 经常被查询的数据有聚集成群的倾向，同时刚被查询的数据，有可能很快会被再次查询；
+2. 磁盘预读，如果我们需要一个字符a,我们是真的只取一个字符a吗？肯定不是。
+磁盘和内存进行交互的最小逻辑单位，一般都是和操作系统相关的，是4k或8k。 可以称为datapage或者叫页。
+
+每个节点里能不能多存储几条数据？可以，不管红黑树。BST,AVL 都会变成树的深度变深，为什么变深？因为其中一个节点有且只有2个
+分支，能不能变成多个分支，或者说N个分支， 即B树。如果是4阶，每个结点最多存3个数据。树的深度随着插入的元素逐渐变多，
+能不能控制每个节点都是4kB，那么每个节点存储的数据就比较多了，对应到mysql 一个结点中不止放一个key值，还可以存放更多的信息，
+
+每次数据读取时，可以是4k,8k,一般情况下都是4kb的整数倍，innodb每次读取数据时，读取16kb,
+
+在3层B树中，如果查找一个数据，进行3次IO,共16k x 3 = 48kB, 支持多少数据量的查询？ 比如一行记录1kb,
+假如可以存在16条记录，指向16个范围，即16 x 16 x 16 = 4096 条数据。合理吗？不合理，表里数据量肯定不止4k条，就会
+加深树的深度，就会带了磁盘IO的次数，如何调整？？？ 存储数据量少的根本原因在哪？哪里占用了很多的额外存储空间，
+是节点中的data记录，能不能把data去掉，不占用。即B+树， 和B树最大的区别？B+树，只有叶子节点存数据，有些key的值是重复的（主要）。
+实际存储时，非叶子节点不存储实际的数据（data）,这种方式的好处？？？  叶子节点 一个节点中可以存放16条数据（假设一行记录为1k）,
+在3层B+树中,加入指针和key 占用10字节，16kB / 10 字节 =  1600 个范围。支持多少数据量的查询？  1600 x 1600 x 16 = 40960000 （4千万数据量）
+每次进行数据检索时，依然只读取48k数据。
+
+建索引时，到底应该给哪些字段建立索引？？  整型，字符串，日期，哪种数据类型？  整型，因为我们再进行数据插入的时候，key占用的空间越小，意味着每个磁盘块划分的范围越大，
+范围越大意味着 固定层数的B+树，可存放的数据越多，所以是越小越好。
+
+注： 在B+树中，有2个头指针，一个指向根节点，另一个指向关键字最小的叶子节点，而且所有的叶子节点之间是一种双向链式结构，
+因此在B+树中，有2种查找运算，一种是对于主键的范围查找和分页查找，另一种从根节点开始，进行随机查找。
+
+一般情况下mysql的索引B+树是几层？？？  千万级别的数据量，一般情况下3层到4层就可以满足，具体情况下还需要看每个key值得大小。 key越小存放得数据越多。
+
+一般情况最好是3层，如果是4层，相对于3层来说，加一个16kb(4层),对整体影响大，数据库得查询 不是一个人在操作，是N个，每个请求多一个16K,。
+
+刚建好一张表，第一次插入数据，B+树是几层？？？   数据只能存储到叶子节点，索引只能存在非叶子节点，所有是2层。 
+插入数据在叶子节点，是会影响B+树得树高的。  为什么？ 索引维护？？ 主键要不要设置成自增？？？   尽量保持自增，自增时的好处，再插入数据时，只需要在叶子节点增加数据，非叶子节点不需要
+改变， 如果不是递增，往中间某一个节点增加数据， 比如一个磁盘块最多放4条记录，并且当前磁盘块已满，再插入时，这个块就需要分裂，从一个块变成2个磁盘块，
+该叶子节点有指针指向该节点，那么非叶子节点，也需要随着修改（分裂等），这个维护的成本很高。
+
+
+存储引擎，innoDb 和MyISAM 都是B+树。
+什么是存储引擎？  不同的存储引擎表示的是不同的文件在 我们的磁盘上的不同的组织形式。  在mysql安装的data目录中可以查看到， tablename.frm（表结构） 或者.ibd （数据和索引存储数据文件）
+当看到是ibd，就说明这张表是innodb存储引擎，聚簇索引。
+如果是 tablename.frm,tablename.MYI（索引文件）,tablename.MYD（数据文件）,说明索引文件和数据文件是分开的。即在磁盘上的不同的组织形式。
+
+事物？
+innoDb 支持；MyISAM不支持
+
+锁
+MyISAM 只支持表锁；innoDb支持表锁和行锁。
+
+外键
+innoDb 支持；MyISAM不支持
+
+全文索引
+老版本innoDb 不支持， 后面的版本都支持了（5.6）
+
+log 
+都支持的log是binlog
+undolog  innoDb 支持；MyISAM不支持
+
+5.5 之后都是默认innoDb存储引擎。
+
+
+InnoDB 引擎，非叶子节点存储的是key, 叶子节点存储的整行的行记录；MyISAM 叶子节点存储的是地址（行记录所在的地址）， InnoDB就一个ibd文件。MyISAM索引文件和数据文件是分开的。
+
+进行数据插入时，是否必须包含一个key值？？？  是 ，没有key 就没法存数据，这个key可能是主键，也可能是唯一键，也可能是row_id。
+
+一个表里可以有多少个索引？？？ 
+一般来说索引的数量是没有限制的，InnoDB的索引是和数据绑定再一起的，如果有5个索引，那就有5种key, 每个索引都和数据绑定再一起吗？？？ 不是， 会导致冗余太多。
+数据和索引是不是一起存放的,如果是就是聚簇索引，如果不是就是非聚簇索引。 如果一个表有主键，那么就是聚簇索引。 聚簇索引 一定是主键索引吗？ 不一定，因为没有主键可以选择唯一键，没有唯一键可以是row_id。
+
+InnoDB是否一定包含一个聚簇索引？ 是
+
+MyISAM包含聚簇索引吗？？ 不包含
+
+表  id（主键）  name 
+
+给name加上索引，再叶子节点中存储的是什么？ 存储的是id这列的值，即聚簇索引的key值，
+即name 列是非聚簇索引，因为数据和索引不是一起存放的。
+
+一句话表示：
+聚簇索引： 数据和索引是一起存放的，聚簇索引的key可以是主键，唯一键，rowid,如果一个表的普通列创建了索引，那么叶子节点中存储的是聚簇索引的key值。
+
+表  id（主键）  name （普通索引） age 
+
+select * from table where name ='zhang'
+
+进行数据检索时，应该怎么检索，先根据name 去name所在B+树找到name=zhang,可以得到相应的id值(1)。 再通过id=1,去主键索引里得到相应的数据，共查询了2次B+树，
+这个过程就叫回表，回的是聚簇索引的那张表。
+
+InnoDB对主键创建索引，然后叶子节点中存储记录，如果没有主键，那么会选择唯一键，如果没有唯一键，那么会生成一个6字节的row_id来作为主键。（6字节够存吗？ 够，int占4个字节，正负21亿，表李的数据一般不会超过21亿）
+如果创建索引的字段是其他字段，那么叶子节点存储的是该记录的主键，然后再通过主键索引找到对应的记录，叫回表。
+
+select id from table where name ='zhang'
+进行数据检索时，应该怎么检索，先根据name 去name所在B+树找到name=zhang,可以得到相应的id值(1)。还不继续回表查询吗？？？ 不用，  不需要回表时叫覆盖索引。
+
+回表无形之中回增加成本。
+
+如果字段长度非常长，可以使用hash进行截取，目的是减少存储空间，尽可能多的存储数据。
+
+组合索引（最左匹配）：
+where name= ？ and age = ？  ，建立组合索引（name,age）,
+最左匹配原则，先匹配name,再匹配age,
+
+索引下推：
+select * from table where name =？ and age = ?
+
+数据存储再存储引擎中，server负责数据的筛选，
+没有索引下推的情况下，先根据name的值从存储引擎中把所有符合条件的记录都滤出来，过滤完后再server层对age进行筛选；   存储引擎做name筛选，执行器做age筛选。
+有索引下推：直接根据name和age的值从存储引擎中过滤出来，不需要server层做任何处理。
+
+减少了server和存储引擎之间的IO量。
+
+5.7版本是默认开启的（optimizer_switch='index_condition_pushdown=off'）
+
+8.1 去掉了查询缓存，命中率太低
+
+索引是有顺序的，如果索引上信息已经满足了我们的需求，那么就不需要使用filsort了。
+索引排序，不需要额外的内存，表空间，缓存，文件来进行排序。 fileSort 必然要借助外部文件系统进行排序。
+
+
+
+mysql 索引 相关技术名词：
+* 回表
+* 索引覆盖
+* 最左匹配
+* 索引下推
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
